[gd_scene load_steps=7 format=3 uid="uid://dx4fh10vgnuhk"]

[ext_resource type="Script" uid="uid://bctfcrf60s5kt" path="res://scenes/binder/income_streams_page.gd" id="1_l6iai"]
[ext_resource type="Texture2D" uid="uid://d355ftby527bc" path="res://assets/proto/paper.png" id="1_w1wq0"]
[ext_resource type="LabelSettings" uid="uid://djkpwc0lasqli" path="res://desk/Resumes/resume_label.tres" id="2_b1eng"]
[ext_resource type="PackedScene" uid="uid://dsf0578qhhgyk" path="res://scenes/grids/income/income_overview_grid.tscn" id="3_b1eng"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ktw"]
atlas = ExtResource("1_w1wq0")
region = Rect2(0, 0, 264, 277)

[sub_resource type="SpriteFrames" id="SpriteFrames_evvlh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ktw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="IncomeStreamsPage" type="Node2D" node_paths=PackedStringArray("income_overview_grid")]
scale = Vector2(4.6512938, 4.5897837)
script = ExtResource("1_l6iai")
income_overview_grid = NodePath("Control/Control/OverviewGrid")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(66, 69.25)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_evvlh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 132.0
offset_bottom = 139.0

[node name="Money in da Bank" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1.9999999
offset_top = 7.0
offset_right = 149.0
offset_bottom = 30.0
scale = Vector2(0.31999952, 0.32000005)
text = "Money in the bank"
label_settings = ExtResource("2_b1eng")

[node name="TotalAmount" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4034353
anchor_top = -0.05462047
anchor_right = 0.40343532
anchor_bottom = -0.054620456
offset_left = 1.9999847
offset_top = 15.000002
offset_right = 148.99998
offset_bottom = 38.000004
scale = Vector2(0.31999952, 0.32000005)
text = "$15"
label_settings = ExtResource("2_b1eng")
metadata/_edit_use_anchors_ = true

[node name="Forecasted Income" type="Label" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 15.0
offset_right = 149.0
offset_bottom = 38.0
scale = Vector2(0.31999952, 0.32000005)
text = "Forecasted Income"
label_settings = ExtResource("2_b1eng")
metadata/_edit_use_anchors_ = true

[node name="Forecasted Income Amount" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.40669248
anchor_top = 0.004942551
anchor_right = 0.4066925
anchor_bottom = 0.004942558
offset_left = 2.0
offset_top = 15.0
offset_right = 149.0
offset_bottom = 38.0
scale = Vector2(0.31999952, 0.32000005)
text = "$15"
label_settings = ExtResource("2_b1eng")
metadata/_edit_use_anchors_ = true

[node name="Forecasted Expenses" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0004928374
anchor_top = 0.058235746
anchor_right = -0.00049278955
anchor_bottom = 0.058235746
offset_left = 2.0
offset_top = 15.0
offset_right = 149.0
offset_bottom = 38.0
scale = Vector2(0.31999952, 0.32000005)
text = "Forecasted Expenses"
label_settings = ExtResource("2_b1eng")
metadata/_edit_use_anchors_ = true

[node name="Forecasted Expenses Amount" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.405064
anchor_top = 0.05666829
anchor_right = 0.405064
anchor_bottom = 0.05666829
offset_left = 1.9999962
offset_top = 14.999999
offset_right = 149.0
offset_bottom = 38.0
scale = Vector2(0.31999952, 0.32000005)
text = "$15"
label_settings = ExtResource("2_b1eng")
metadata/_edit_use_anchors_ = true

[node name="Income Streams" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28800002
anchor_top = 0.23700002
anchor_right = 0.64400005
anchor_bottom = 0.29000002
offset_left = 1.9839973
offset_top = -0.9430008
offset_right = 104.99223
offset_bottom = 14.689999
scale = Vector2(0.31999952, 0.32000005)
text = "Income Streams"
label_settings = ExtResource("2_b1eng")
horizontal_alignment = 1

[node name="IncomeStreamAmount" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28800002
anchor_top = 0.23700002
anchor_right = 0.64400005
anchor_bottom = 0.29000002
offset_left = 1.9839973
offset_top = -0.9430008
offset_right = 104.99223
offset_bottom = 14.689999
scale = Vector2(0.31999952, 0.32000005)
text = "Income Streams"
label_settings = ExtResource("2_b1eng")
horizontal_alignment = 1

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 128.0

[node name="OverviewGrid" parent="Control/Control" instance=ExtResource("3_b1eng")]
layout_mode = 1
offset_left = -6.0
offset_top = 1.0
offset_right = 468.9986
offset_bottom = 340.28348
scale = Vector2(0.24000072, 0.28000185)

[node name="WorkersButton" type="Button" parent="."]
offset_left = 100.18718
offset_top = 3.0502527
offset_right = 173.18718
offset_bottom = 34.05025
scale = Vector2(0.31354517, 0.26190478)
text = "Workers"

[connection signal="on_detail_button_press" from="Control/Control/OverviewGrid" to="." method="_on_overview_grid_on_detail_button_press"]
[connection signal="button_up" from="WorkersButton" to="." method="_on_workers_button_button_up"]
